conv-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template: 
    metadata:
      labels:
        components: backend
    spec:
      containers:
        - name: conv-api
          image: antonlarichev/conv-api
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
          - name: conv-api-data
            mountPath: /opt/app/uploads
      volumes:
        - name: onv-api-data
          persistentVolumeClaim:
            claimName: conv-api-pvc
