converter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  converter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter
  template: 
    metadata:
      labels:
        app: converter
    spec:
      containers:
        - name: converter
          image: antonlarichev/conv-service
          - name: AMQP_EXCHANGE
            valueFrom:
              secretKeyRef:
                name: conv-api-secret
                key: AMQP_EXCHANGE
          - name: AMQP_USER
             valueFrom:
              secretKeyRef:
                name: conv-api-secret
                key: AMQP_USER
          - name: AMQP_PASSWORD
             valueFrom:
              secretKeyRef:
                name: conv-api-secret
                key: AMQP_PASSWORD
          - name: AMQP_HOSTNAME
             valueFrom:
              secretKeyRef:
                name: conv-api-secret
                key: AMQP_HOSTNAME
          - name: AMQP_QUEUE
             valueFrom:
              secretKeyRef:
                name: conv-api-secret
                key: AMQP_QUEUE
          ports:
            - containerPort: 3001
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
