converter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
  labels:
    app: converter
spec:
  type: ClusterIP
  ports:
    - port: 3001
      protocol: TCP
  selector:
    components: converter
